<resources>
    <string name="app_name">Challenge Binar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_belum_diisi">Username belum diisi</string>
    <string name="email_belum_diisi">Email belum diisi</string>
    <string name="password_belum_diisi">Password belum diisi</string>
    <string name="konfirmasi_password_belum_diisi">Konfirmasi password belum diisi</string>
    <string name="password_tidak_sama">Password tidak sama</string>
    <string name="signin">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pss">Forgot password?</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="asset_top">Asset Top</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="hallo">Hallo, $User</string>
    <string name="popular">Popular</string>
    <string name="image_movie">Image Movie</string>
    <string name="nonton">Mau nonton apa?</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="description">Description</string>
    <string name="enjoy">Enjoy</string>
    <string name="update">Update</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="favorite_user">Favorite $User</string>
    <string name="tv_empty_favorite">Favorite Kamu Kosong!\n\nTekan Love untuk menambahkan list!</string>
    <string name="minutes">Minutes</string>
    <string name="angka">72</string>
    <string name="isi_deskripsi">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="tagline">Tagline</string>

</resources>