<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    tools:context=".ui.detail.DetailMovieFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        app:icon="@drawable/ic_baseline_arrow_back"
        style="@style/Widget.AppCompat.ActionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/default_image"
        android:scaleType="fitXY"
        android:contentDescription="@string/image"
        android:layout_width="match_parent"
        android:layout_height="270dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintBottom_toBottomOf="@id/iv_image"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="12dp"
        android:elevation="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/iv_poster"
            android:src="@drawable/ic_baseline_image"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:layout_width="100dp"
            android:layout_height="130dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintBottom_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toEndOf="@id/cv_poster"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginStart="24dp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_date"
        app:layout_constraintStart_toEndOf="@id/cv_poster"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:text="Release Date :"
        android:textColor="@color/white"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_input_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/tv_date"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_duration"
        app:layout_constraintStart_toStartOf="@id/tv_date"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        android:text="Duration          :"
        android:textColor="@color/white"
        android:layout_marginTop="2dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_input_duration"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toEndOf="@id/tv_duration"
        android:text="@string/angka"
        android:textColor="@color/white"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_minutes"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toEndOf="@id/tv_input_duration"
        android:text="@string/minutes"
        android:textColor="@color/white"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_poster"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_description"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_detail"
            android:layout_marginTop="8dp"
            android:text="@string/isi_deskripsi"
            android:textColor="@color/white"
            android:justificationMode="inter_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_tagline"
            android:text="@string/tagline"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_tagline_value"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>