<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        app:icon="@drawable/ic_baseline_arrow_back"
        style="@style/Widget.AppCompat.ActionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        app:icon="@drawable/ic_baseline_exit_to_app"
        style="@style/Widget.AppCompat.ActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:iconSize="32dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        android:layout_marginTop="12dp"
        android:src="@drawable/default_profile"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_photo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:errorEnabled="true"
        android:gravity="center"
        android:layout_marginHorizontal="24dp"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeErrorColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:errorEnabled="true"
        android:gravity="center"
        android:layout_marginHorizontal="24dp"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeErrorColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:gravity="center"
        android:layout_marginHorizontal="24dp"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:errorIconTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        android:text="@string/update"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_container"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/black"
        android:layout_marginTop="18dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="24dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>